Added a simple jump

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
   
-  <img id="erba" src="ball/assets/erba.png" alt="">
-  <img id="palla" src="ball/assets/palla.jpg" alt="">
+ <div id="jumpButtonContainer">
+   <button id="jumpButton">jump</button>
+ </div>
+  
+
+  <img id="erba" src="ball/assets/erba.png" alt="erba">
+  <img id="palla" src="ball/assets/palla.png" alt="palla">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="ball/script.js"></script>
